etapa-final-frontend

--- a/routes/Departamento/gestores/view-membros-gestor.html
+++ b/routes/Departamento/gestores/view-membros-gestor.html
@@ -35,7 +35,7 @@
             <ul>
                 <a href="/index.html"><li>Chamadas</li></a>
                 <li  class="pagina-atual">Departamento</li>
-                <li>Perfil</li>
+                <a href="routes/index-profile.html"><li>Perfil</li></a>
                 <li>Ajuda</li>
                 <li>Logout</li>
             </ul>
