--- a/routes/index-profile.html
+++ b/routes/index-profile.html
@@ -36,7 +36,7 @@
                 <img src="/img/Logo M.png" alt="">
             </div>
             <ul>
-                <a href="index.html"></a><li >Chamadas</li>
+                <a href="index.html"><li >Chamadas</li></a>
                 <a href="/routes/Departamento/gestores/view-membros-gestor.html"><li>Departamento</li></a>
                 <a href="#"></a> <li  class="pagina-atual">Perfil</li>
                 <li>Ajuda</li>
@@ -107,7 +107,7 @@
                                         <p>Nível</p>
                                     </div>
     
-                                    <select name="" id="" disabled >
+                                    <select name="" id="" disabled  >
                                         <option value="">Colaborador</option>
                                         <option value="">Gestor</option>
                                     </select>
