--- a/routes/Departamento/Adm/Add/add-membro.html
+++ b/routes/Departamento/Adm/Add/add-membro.html
@@ -37,12 +37,15 @@
                 <img src="/img/Logo M.png" alt="">
             </div>
             <ul>
-                <li class="pagina-atual">Chamadas</li>
-                <li>Departamento</li>
-                <li>Perfil</li>
-                <li>Ajuda</li>
-                <li>Logout</li>
-            </ul>
+                <a href="/index.html"> <li >Chamadas</li></a>
+                 <a href="/routes/Departamento/Adm/view-membros-adm.html"><li class="pagina-atual">Departamento</li></a>
+                 <a href="/routes/index-profile.html"><li>Perfil</li></a>
+                 <a href="/routes/index-ajuda.html"><li>Ajuda</li></a> 
+                 <a href="/routes/index-login.html" class="logout"><li>Logout</li></a>
+             </ul>
+             <div>
+                 <img src="/img/LOGO-rodape.png" alt="">
+             </div>
         </div>
 
         <div class="row">
