--- a/routes/Departamento/gestores/v-setores-gestor-colaboradores.html
+++ b/routes/Departamento/gestores/v-setores-gestor-colaboradores.html
@@ -33,12 +33,15 @@
                 <img src="/img/Logo M.png" alt="">
             </div>
             <ul>
-                <a href="/index.html"><li>Chamadas</li></a>
-                <a href="/routes/Departamento/colaboradores/view-membros-colaboradoress.html"><li  class="pagina-atual">Departamento</li></a>
-                <li>Perfil</li>
-                <li>Ajuda</li>
-                <li>Logout</li>
-            </ul>
+                <a href="/index.html"> <li >Chamadas</li></a>
+                 <a href="/routes/Departamento/gestores/view-membros-gestor.html"><li class="pagina-atual">Departamento</li></a>
+                 <a href="/routes/index-profile.html"><li>Perfil</li></a>
+                 <a href="/routes/index-ajuda.html"><li>Ajuda</li></a> 
+                 <a href="/routes/index-login.html" class="logout"><li>Logout</li></a>
+             </ul>
+             <div>
+                 <img src="/img/LOGO-rodape.png" alt="">
+             </div>
         </div>
 
         <div class="row">
@@ -46,7 +49,7 @@
                 <header>
                     <div class="pt-4">
                         <h3>Setores</h3>
-                        <p>Nessa aba é possível acompanhar os membros do seu departamento.
+                        <p>Nessa aba é possível acompanhar os setores da Uniavan.
                         </p>
                     </div>
 
