--- a/routes/Departamento/gestores/view-membros-gestor.html
+++ b/routes/Departamento/gestores/view-membros-gestor.html
@@ -33,18 +33,21 @@
                 <img src="/img/Logo M.png" alt="">
             </div>
             <ul>
-                <a href="/index.html"><li>Chamadas</li></a>
-                <li  class="pagina-atual">Departamento</li>
-                <a href="routes/index-profile.html"><li>Perfil</li></a>
-                <li>Ajuda</li>
-                <li>Logout</li>
-            </ul>
+                <a href="/index.html"> <li >Chamadas</li></a>
+                 <a href="/routes/Departamento/gestores/view-membros-gestor.html"><li class="pagina-atual">Departamento</li></a>
+                 <a href="/routes/index-profile.html"><li>Perfil</li></a>
+                 <a href="/routes/index-ajuda.html"><li>Ajuda</li></a> 
+                 <a href="/routes/index-login.html" class="logout"><li>Logout</li></a>
+             </ul>
+             <div>
+                 <img src="/img/LOGO-rodape.png" alt="">
+             </div>
         </div>
 
         <div class="row">
             <div class="col">
                 <header >
-                    <div class="d-flex pt-4">
+                    <div class="pt-4">
                         <h3>Membros</h3>
                         <p>Nessa aba é possível acompanhar e adicionar novos membros ao seu departamento. 
                         </p>
