--- a/routes/index-ajuda.html
+++ b/routes/index-ajuda.html
@@ -33,12 +33,15 @@
                 <img src="/img/Logo M.png" alt="">
             </div>
             <ul>
-                <a href="index.html"><li >Chamadas</li></a>
-                <a href="/routes/Departamento/gestores/view-membros-gestor.html"><li>Departamento</li></a>
-                <a href="#"></a> <li  class="pagina-atual">Perfil</li>
-                <li>Ajuda</li>
-                <li>Logout</li>
-            </ul>
+                <a href="/index.html"> <li >Chamadas</li></a>
+                 <a href="/routes/Departamento/gestores/view-membros-gestor.html"><li >Departamento</li></a>
+                 <a href="/routes/index-profile.html"><li>Perfil</li></a>
+                 <a href="/routes/index-ajuda.html"><li class="pagina-atual">Ajuda</li></a> 
+                 <a href="/routes/index-login.html" class="logout"><li>Logout</li></a>
+             </ul>
+             <div>
+                 <img src="/img/LOGO-rodape.png" alt="">
+             </div>
         </div>
 
         <div class="row">
