--- a/index.html
+++ b/index.html
@@ -32,12 +32,15 @@
                 <img src="/img/Logo M.png" alt="">
             </div>
             <ul>
-               <a href="http://"> <li class="pagina-atual">Chamadas</li></a>
-                <a href="/routes/Departamento/gestores/view-membros-gestor.html"><li>Departamento</li></a>
-                <a href="#"></a><li>Perfil</li>
-                <li>Ajuda</li>
-                <li>Logout</li>
-            </ul>
+                <a href="/index.html"> <li class="pagina-atual">Chamadas</li></a>
+                 <a href="/routes/Departamento/Adm/view-membros-adm.html"><li>Departamento</li></a>
+                 <a href="/routes/index-profile.html"><li>Perfil</li></a>
+                 <a href="/routes/index-ajuda.html"><li>Ajuda</li></a> 
+                 <a href="/routes/index-login.html" class="logout"><li>Logout</li></a>
+             </ul>
+             <div>
+                 <img src="/img/LOGO-rodape.png" alt="">
+             </div>
         </div>
 
         <div class="row">
