--- a/routes/Departamento/Adm/view-membros-adm.html
+++ b/routes/Departamento/Adm/view-membros-adm.html
@@ -33,11 +33,11 @@
                 <img src="/img/Logo M.png" alt="">
             </div>
             <ul>
-                <a href="/index.html"><li>Chamadas</li></a>
-                <li  class="pagina-atual">Departamento</li>
-                <li>Perfil</li>
-                <li>Ajuda</li>
-                <li>Logout</li>
+                <a href="/index.html"> <li >Chamadas</li></a>
+                 <a href="/routes/Departamento/gestores/view-membros-gestor.html"><li  class="pagina-atual">Departamento</li></a>
+                 <a href="/routes/index-profile.html"><li>Perfil</li></a>
+                 <a href="/routes/index-ajuda.html"><li>Ajuda</li></a> 
+                 <a href="/routes/index-login.html" class="logout"><li>Logout</li></a>
             </ul>
         </div>
 
@@ -84,8 +84,8 @@
 
                     <div>
                         <div class="box-menu">
-                            <button id="btn-cta-blue" onclick="">Nova Solicitação <img src="/img/add_24px.png" alt=""></button>
-                        </div>
+                           <button id="btn-cta-blue" onclick=""><a href="add/add-membro.html">Nova Solicitação </a><img src="/img/add_24px.png" alt=""></button>
+                           </div>
                     </div>
                 </div>
 
@@ -93,16 +93,16 @@
                 <div class="row">
                     <div class="col input-search">
                         <input type="text" class="form-control shadow-none" arial-label="exemple" placeholder="Buscar por nome, departamento"/>
-                        <button>
+                        <button > 
                             <svg width="18" height="18" viewBox="0 0 18 18" fill="rgb(196, 196, 196)" xmlns="http://www.w3.org/2000/svg">
                             <path d="M11.5365 11.18L11.6091 11.25H11.71H12.3963L17.1366 15.9998L15.9998 17.1366L11.25 12.3963V11.71V11.6091L11.18 11.5365L10.91 11.2565L10.7461 11.0865L10.567 11.2404C9.47058 12.183 8.04787 12.75 6.5 12.75C3.04807 12.75 0.25 9.95193 0.25 6.5C0.25 3.04807 3.04807 0.25 6.5 0.25C9.95193 0.25 12.75 3.04807 12.75 6.5C12.75 8.04787 12.183 9.47058 11.2404 10.567L11.0865 10.7461L11.2565 10.91L11.5365 11.18ZM1.75 6.5C1.75 9.12807 3.87193 11.25 6.5 11.25C9.12807 11.25 11.25 9.12807 11.25 6.5C11.25 3.87193 9.12807 1.75 6.5 1.75C3.87193 1.75 1.75 3.87193 1.75 6.5Z" fill="#C4C4C4" stroke="white" stroke-width="0.5"/>
                             </svg>
-                             </button>
+                        </button>
                     </div>
                 </div>
+                
 
-
-                <div class="row">
+                <div class="row pt-5">
                     <div class="col bg-table px-5">
                         <table class="table table-light-blue">
                             <thead>
@@ -149,7 +149,6 @@
 
 
             </div>
-
             <script src="/js/main.js"></script>
             <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
                 integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
