--- a/routes/index-historico.html
+++ b/routes/index-historico.html
@@ -36,15 +36,15 @@
                 <img src="/img/Logo M.png" alt="">
             </div>
             <ul>
-                <li class="pagina-atual">Chamadas</li>
-                <li>Departamento</li>
-                <li>Perfil</li>
-                <li>Ajuda</li>
-                <li>Logout</li>
-            </ul>
-            <div class="rodape_logo">
-                <img src="/img/LOGO-rodape.png" alt="">
-            </div>
+                <a href="/index.html"> <li class="pagina-atual">Chamadas</li></a>
+                 <a href="/routes/Departamento/gestores/view-membros-gestor.html"><li >Departamento</li></a>
+                 <a href="/routes/index-profile.html"><li>Perfil</li></a>
+                 <a href="/routes/index-ajuda.html"><li>Ajuda</li></a> 
+                 <a href="/routes/index-login.html" class="logout"><li>Logout</li></a>
+             </ul>
+             <div>
+                 <img src="/img/LOGO-rodape.png" alt="">
+             </div>
         </div>
 
         <div class="row">
